height transition blinking on ios fixed

--- a/app/styles/animation/animation.styl
+++ b/app/styles/animation/animation.styl
@@ -12,7 +12,9 @@
 .max-height-transition {
   transition(max-height 0.7s cubic-bezier(0.23, 1, 0.32, 1))
 }
-
+.height-transition
+  &.ng-animate
+    display none
 
 @-webkit-keyframes empty {
   from {
