--- a/app/styles/common/layout.styl
+++ b/app/styles/common/layout.styl
@@ -88,5 +88,5 @@ body
       bottom 0
 
       .animated-view
-        padding-top $navbar-height
+        padding-top $navbar-height + 10
         background #fff
