--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -76,3 +76,6 @@
     .select-group-container
       margin-top 10px
       margin-bottom 20px
+
+  .expander
+    height 300px
